# SAFe_tooling

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_ACCESSIBILITY.md  CLAUDE_SECURITY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  zap-sitemap-hook.py  zap-sitemap.txt
.github/workflows/: ci.yml  close-screenshots-pr.yml  codeql.yml  frontend-mutation.yml  mutation.yml  tqa.yml  zap-baseline.yml
docs/: openapi.yaml
frontend/: Dockerfile  biome.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: art-setup.spec.ts  art-sync.spec.ts  backlog-mutations.spec.ts  backlog.spec.ts  board.spec.ts  capacity.spec.ts  dependencies-mutations.spec.ts  dependencies.spec.ts  helpers.ts  inspect-adapt.spec.ts  navigation.spec.ts  objectives-mutations.spec.ts  pi-health.spec.ts  predictability.spec.ts  risks-mutations.spec.ts  risks.spec.ts  screenshots.spec.ts  setup.spec.ts  stories-mutations.spec.ts  stories.spec.ts  team-setup.spec.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  logger.ts  main.tsx  types.ts
tests/: conftest.py  e2e_fixture.clean.json  test_api_capacity_plans.py  test_api_compute.py  test_api_dependencies.py  test_api_deps.py  test_api_dev.py  test_api_docs_config.py  test_api_features.py  test_api_improvement_actions.py  test_api_iterations.py  test_api_objectives.py  test_api_pi.py  test_api_risks.py  test_api_smoke.py  test_api_stories.py  test_api_teams.py  test_backlog_commands.py  test_board.py  test_board_commands.py  test_capacity.py  test_capacity_commands.py  test_cli.py  test_demo_seed.py  test_dependency_commands.py  test_models.py  test_openapi_contract.py  test_pi_commands.py  test_pi_logic.py  test_predictability.py  test_repository.py  test_sanitisation.py  test_snapshot.py  test_team_commands.py  test_wsjf.py
(+122 files in other folders)
