[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-tooling"
version = "0.1.1"
description = "CLI tools for SAFe PI Planning"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.7",
    "tinydb>=4.8",
    "openpyxl>=3.1,<4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
safe = "safe.cli.main:app"
safe-api = "safe.api.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.4",
    "schemathesis>=4.0",
    "mypy>=1.10",
    "mutmut>=2,<3",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["safe*"]

[tool.coverage.run]
relative_files = true
omit = [
    "tests/*",
    "*__tests__*",
    "*dev_seed*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
]
ignore = [
    "B008",  # do not perform function calls in default arguments (common in FastAPI/Typer)
]

[tool.ruff.lint.per-file-ignores]
# pytest uses assert statements by design — S101 is a false positive in test files
"tests/*" = ["S101"]

[tool.mutmut]
paths_to_mutate = "safe/logic/"
tests_dir = "tests/"
runner = "python -m pytest tests/test_wsjf.py tests/test_capacity.py tests/test_predictability.py -x -q"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["prop-decorator"]
